# misc

./: .gitignore
analyze-ort-profile/: analyze.py
bert-model/: bert.py  run.sh  single_run.sh
build-ort/: build_rocm.sh
causal-lm/: main.py  models  run.sh  single_run.sh
chatApp/: __init__.py  chatio.py  conversation.py  inference.py  main.py  run.sh  test_chat.py
chatApp/chatcli/: chatio.py  inference.py
cuda-gemm/: CMakeLists.txt  cuda_memory_kernel.cu  dense.cu  hand_gemm.cu  main.cu  opted_gemm.cu  run.sh
cuda-test/: build_run.sh  main.cu
fp16-acc/: last_ln.pt  layer_norm_diff.py  test_export_onnx.py
fp16-acc/models/: parallel_layers.py
group-norm/: group_norm.py
grouped-gemm/: grouped_gemm_all_gpu.py  grouped_gemm_cpu_map.py  grouped_gemm_gpu_map.py  run.sh  testcase_loop.py
llm-gen-example/: main.py  run.sh  test_sm.cpp
llm-opt/falcon/: falcon.py  optimum-falcon.py  single_run.sh
llm-opt/llama/: llama.py  optimum-llama.py  requirements.txt  single_run.sh
llm-opt/llama2/: Example_ONNX_LlamaV2.py  chatcli  export_to_onnx.py  export_to_python.py  generation.py  llama-v2.py  llama_parity.py  ort_llama.py  requirements.txt  run.sh  single_run.sh  test_profile.py
llm-opt/llama2/models/: modeling_llama.py  parallel_layers.py
load-triton-kernel/: CMakeLists.txt  build.sh  load_kernel.cc  load_kernel.cu  load_kernel.cuh  main.cc  main.cu  triton_metadata.h
mat-allreduce-fusion/: run.sh  test_fusion.py
onnx-function/: function_node.py  main.py
onnxscript/: run.sh  toy_model.py
tmuxconf/: .tmux.conf
torch-cuda/: setup.py
torch-cuda/csrc/: cuda_ops.cpp  fused_attn_kernels.cu
torch-exten/: setup.py
torch-exten/csrc/: matmul_cublasLt.cu  pybind.cpp
torch-exten/te/: matmul.py
torch-exten/tests/: run.sh  test.py
torch-triton/: fwd_flash_atten.py  grouped_gemm.py  grouped_gemm_cpu_map.py  main.py  matmul.py  run.sh  simple.py  single_run.sh  softmax.py  triton_exmaple.py
vimrc/: .vimrc
